--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stackblitz-starters-ndlknh",
+  "name": "semblante",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -15,5 +15,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
